# cerberus

./: .gitmodules  README.md
Cerberus/: Cerberus.sln  comandosEFCORE.txt  gitcommands.txt  luaCopy.bat
Cerberus/Cerberus.API/: Cerberus.API.csproj  Cerberus.API.http  Program.cs  appsettings.json
Cerberus/Cerberus.API/Controllers/: ComputerController.cs  ComputerFileController.cs  ComputerScriptController.cs  LuaResultController.cs  UserController.cs  VictimController.cs
Cerberus/Cerberus.API/Dto/: ComputerDto.cs  ComputerFileDto.cs  ComputerScriptDto.cs  UserDto.cs  VictimDto.cs
Cerberus/Cerberus.API/Helper/: MappingProfiles.cs
Cerberus/Cerberus.Domain.ApiService/: Cerberus.Domain.ApiService.csproj
Cerberus/Cerberus.Domain.Models/: Class1.cs
Cerberus/Cerberus.Infrastructure.Data/: Class1.cs
Cerberus/Cerberus.Malicious/: Cerberus.Malicious.vcxproj  dllmain.cpp
Cerberus/Cerberus.Malicious.Embedded/: Cerberus.Malicious.Embedded.vcxproj  Cerberus.Malicious.Embedded.vcxproj.filters  dllmain.cpp  keys.cpp  keys.h
Cerberus/Cerberus.Presentation.Trojan/: Cerberus.Presentation.Trojan.csproj  Program.cs
Cerberus/Cerberus.Presentation.Trojan/Malicious/Screenshot-win/: CMakeLists.txt  Screenshot-win.cpp  Screenshot-winnew.cpp  Tutorial.txt  base64encode.cpp  base64encode.h
Cerberus/Cerberus.Presentation.WEB/: Cerberus.Presentation.WEB.csproj  Program.cs  appsettings.json
Cerberus/EmbeddingLua/: EmbeddingLua.cpp  EmbeddingLua.vcxproj  EmbeddingLua.vcxproj.filters
Cerberus/LuaScripts/: LuaScripts.luaproj  keylogger.lua
(+115 files in other folders)
